# Denali

./: .gitignore  CMakeLists.txt  README.md
PDFSets/: README.md
PDFSets/2404.xxxxx/: README.md
Results/MAPPDFpol10NLO/: BestParameters.yaml  Chi2s.yaml  MatplotlibSettings.py  Predictions.yaml  config.yaml
Results/MAPPDFpol10NNLO/: BestParameters.yaml  Chi2s.yaml  Predictions.yaml  config.yaml
analysis/Analysis_template/: AnalysePredictions.ipynb
config/: example.yaml  test_training.yaml
data/: COMPASS_A1D_KA_MINUS.yaml  COMPASS_A1D_KA_PLUS.yaml  COMPASS_A1D_PI_MINUS.yaml  COMPASS_A1D_PI_PLUS.yaml  COMPASS_A1P_KA_MINUS.yaml  COMPASS_A1P_KA_PLUS.yaml  COMPASS_A1P_PI_MINUS.yaml  COMPASS_A1P_PI_PLUS.yaml  COMPASS_G1D.yaml  COMPASS_G1P.yaml  E142_G1N.yaml  E143_G1D.yaml  E143_G1P.yaml  E154_G1N.yaml  E155_G1N_F1N.yaml  E155_G1P_F1P.yaml  EMC_G1P.yaml  HERMES_2018_A1D_KA_MINUS.yaml  HERMES_2018_A1D_KA_PLUS.yaml  HERMES_2018_A1D_PI_MINUS.yaml  HERMES_2018_A1D_PI_PLUS.yaml  HERMES_2018_A1P_PI_MINUS.yaml  HERMES_2018_A1P_PI_PLUS.yaml  HERMES_A1D_KA_MINUS.yaml  HERMES_A1D_KA_PLUS.yaml  HERMES_A1D_PI_MINUS.yaml  HERMES_A1D_PI_PLUS.yaml  HERMES_A1P_PI_MINUS.yaml  HERMES_A1P_PI_PLUS.yaml  HERMES_G1D.yaml  HERMES_G1N.yaml  HERMES_G1P.yaml  JLAB_E06_014_G1N_F1N.yaml  JLAB_E97_103_G1N.yaml  JLAB_E99_117_G1N_F1N.yaml  JLAB_EG1_DVCS_G1D_F1D.yaml  JLAB_EG1_DVCS_G1P_F1P.yaml  README.md  SMC_G1D.yaml  SMC_G1P.yaml  (+2 more)
inc/Denali/: AnalyticChiSquare.h  (+6 more)
resources/: astyle.sh
run/: CMakeLists.txt  ComputeChi2s.cc  LHAPDFGrid.cc  Optimize.cc  Predictions.cc
src/: CMakeLists.txt
(+443 files in other folders)
